[tool.poetry]
name = "belvys"
version = "0.2.8"
description = "Package to fetch data through the REST API of energy portfolio management software \"Belvis\"."
authors = ["rwijtvliet <rwijtvliet@gmail.com>"]
license = "BSD-3"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9" 
pyyaml = "^6.0.1"
numpy = "^1.25.2"
requests = "^2.31.0"
tqdm = "^4.66.1"
portfolyo = "^0.5.8"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
twine = "^4.0.2"
pre-commit = "^3.6.0"
ipykernel = "^6.25.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
matplotlib = "^3.8.2"
numpydoc = "^1.6.0"
sphinx-copybutton = "^0.5.2"
sphinx-exec-code = "^0.10"
sphinx-rtd-theme = "^1.3.0"
insegel = "^1.3.1"
nbsphinx = "^0.9.3"
pandoc = "^2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
